crates/bevy_ecs/compile_fail/tests/ui/system_query_get_many_lifetime_safety.stderr
error[E0502]: cannot borrow `query` as mutable because it is also borrowed as immutable
  --> tests/ui/system_query_get_many_lifetime_safety.rs:8:14
   |
7  |     let a1 = query.get_many([e, e]).unwrap();
   |              ----- immutable borrow occurs here
8  |     let a2 = query.get_mut(e).unwrap();
   |              ^^^^^^^^^^^^^^^^ mutable borrow occurs here
9  |
10 |     println!("{} {}", a1[0].0, a2.0);
   |                       ----- immutable borrow later used here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
